@@ -150,6 +150,7 @@ void SP_monster_q1_tarbaby(edict_t *self);
 void SP_monster_q1_wizard(edict_t *self);
 void SP_monster_q1_ogre(edict_t *self);
 void SP_monster_q1_hknight(edict_t *self);
+void SP_monster_q1_demon(edict_t *self);
 void SP_monster_q1_shalrath(edict_t *self);
 void SP_monster_q1_shambler(edict_t *self);
 
@@ -294,6 +295,7 @@ spawn_t	spawns[] =
 	{"monster_q1_wizard", SP_monster_q1_wizard},
 	{"monster_q1_ogre", SP_monster_q1_ogre},
 	{"monster_q1_hknight", SP_monster_q1_hknight},
+	{"monster_q1_demon", SP_monster_q1_demon},
 	{"monster_q1_shalrath", SP_monster_q1_shalrath},
 	{"monster_q1_shambler", SP_monster_q1_shambler},
 
